compiler-tests/src/test/data/diagnostic/dependencygraph/ParameterlessBindsDuplicate.ir.diag.txt
/ParameterlessBindsDuplicate.kt:6:11: error:
[Metro/DuplicateBinding] Multiple bindings found for ValidFoo

      ParameterlessBindsDuplicate.kt:11:13
        @Provides fun provideValidFoo(): ValidFoo
                                         ~~~~~~~~

      ParameterlessBindsDuplicate.kt:9:10
        @Binds fun bindValidFoo(): ValidFoo
                                   ~~~~~~~~

  help: remove or disambiguate the duplicate bindings (e.g. with distinct qualifiers), or use
        @IntoSet/@IntoMap if you intended a multibinding
  docs: https://zacsweers.github.io/metro/latest/diagnostics/#duplicatebinding
